--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   {% include head.html %}
+  {% include background-video.html %}
   <body>
     <div class="container">
       {% include header.html %}
