--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 ---
 ---
 body {
-    background: url('/assets/images/background.jpg') no-repeat center center fixed;
+    background: url('/assets/img/background.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
