--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,10 @@
 ---
 ---
+body {
+    background: url('/assets/img/background.gif') no-repeat center center fixed;
+    background-size: cover;
+}
+
 
 $base-font-family: 'Roboto', sans-serif;
 $body-font-family: 'Roboto', sans-serif;
