--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,8 @@
       </div>
       {% include footer.html %}
     </div>
+
+    <!-- 在页面底部引入 JavaScript 文件 -->
+    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   </body>
 </html>
