--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,8 +3,24 @@
 body {
     background: url('/assets/img/background.gif') no-repeat center center fixed;
     background-size: cover;
+    font-family: $base-font-family;
+}
+.text-container {
+    position: relative;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 0 auto;
+    opacity: 0; /* 初始状态为不可见 */
+    transition: opacity 0.5s ease; /* 平滑过渡效果 */
 }
 
+.text-container.has-content {
+    background: rgba(255, 255, 255, 0.6); /* 半透明背景 */
+    backdrop-filter: blur(10px); /* 背景虚化 */
+    opacity: 1; /* 有文字时显示 */
+}
 $base-font-family: 'Roboto', sans-serif;
 $body-font-family: 'Roboto', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
