--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -5,7 +5,7 @@ pre {
 code {
   padding: .25em .5em;
   font-size: .8rem;
-  background-color: #f5f5f5;
+  background: rgba(255, 250, 240, 0.66);
   border-radius: 3px;
 }
 pre {
@@ -19,7 +19,7 @@ pre {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f5f5f5;
+  background: rgba(255, 250, 240, 0.66);
 }
 pre code {
   padding: 0;
