--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,8 +2,8 @@
   min-height: 56px;
   width: $container-width;
   position: fixed;
-  background-color: white;
-  box-shadow: 0 5px 6px -6px #bbb;
+  background-color: rgba(255, 255, 255, 0.12);
+  box-shadow: 0 5px 6px -6px white;
   z-index: 100;
 }
 @media (max-width: $container-width) {
@@ -12,7 +12,7 @@
     width: 95vw;
     position: fixed;
     background-color: white;
-    box-shadow: 0 5px 6px -6px #bbb;
+    box-shadow: 0 5px 6px -6px white;
     z-index: 100;
   }
 }
